alignment nav fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -375,7 +375,6 @@ hr.line {
 	float: none;
 	li {
 		float: none;
-		text-align: center;
 		display: inline-block;
 		a, > .text {
 			padding: 8px 10px 11px;
@@ -1069,6 +1068,13 @@ button.btn:disabled:hover,
 	}
 	.main {
 		padding: 10px 20px 25px;
+	}
+	.widget .extendednavigation ul.align-right li.folder:after {
+    	left: 5px;
+    	right: inherit;
+	}
+	.widget .extendednavigation ul li.folder {
+		padding-right:0;
 	}
 }
 
